Add host city coordinates

--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
             maxZoom: 19,
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
         }).addTo(map);
+
+        // Host City Markers (currently set to city coordinates)
+        var nine = L.marker([55.761480634243156, 37.65177582945458]).addTo(map);
+        var ten = L.marker([59.913722734735764, 10.75146110137051]).addTo(map);
+        var eleven = L.marker([51.222000066591775, 6.777945629354757]).addTo(map);
+        var twelve = L.marker([40.40911651084919, 49.87279717970986]).addTo(map);
+        var thirteen = L.marker([55.604207176905376, 13.004288332607715]).addTo(map);
+        var fourteen = L.marker([55.676079797517744, 12.564981993068116]).addTo(map);
+        var fifteen = L.marker([48.20709693896373, 16.372161468666455]).addTo(map);
+        var sixteen = L.marker([59.32673853128823, 18.072679759336534]).addTo(map);
+        var seventeen = L.marker([50.45668409173789, 30.534014165082667]).addTo(map);
+        var eighteen = L.marker([38.7215539348787, -9.1387970150705]).addTo(map);
+        var nineteen = L.marker([32.0838839158771, 34.78233091145113]).addTo(map);
+        var twentyone = L.marker([51.92499328957138, 4.47812209293861]).addTo(map);
+        var twentytwo = L.marker([45.068412068030895, 7.688968426987515]).addTo(map);
+        var twentythree = L.marker([53.409524626854974, -2.9975656703291174]).addTo(map);
+        var twentyfour = L.marker([55.563800975211564, 12.976248883705855]).addTo(map);
     </script>
 </body>
 
